# rustos

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
docs/: design.md
docs/assets/: architecture-diagram.puml  context-switch.puml
docs/research/: context-switch.md
examples/: blink-task.rs  hello-world.rs
src/: lib.rs  scheduler.rs  task.rs  timer.rs
